# tucker3d

./: .gitignore  LICENSE  README.md  __init__.py  molecules_conv_cross.py  testing.ipynb
core/: __init__.py  convolution.py  cross.py  cross_conv.py  cross_multifun.py  mkl_fft.py  tucker.py
core/maxvol/: .CFUserTextEncoding  .bash_history  .bash_profile  .bash_profile.pysave  .bash_profile.save  .enstaller4rc  .gitconfig  .lesshst  _maxvol.py  setup.py
core/maxvol/.cache/fontconfig/: 008559a041339152d0dad1fd1c13c4a9-le64.cache-3  0f0db7876307790c19e1f91eb9095080-le64.cache-3  1487dd4aecf3164c4a11193169052443-le64.cache-3  49aa604a5ac92994756d3008e408245c-le64.cache-3  558352270fb122ca08359d23b5a778d4-le64.cache-3  5dc9fcf026e07a49c5f91c19054b9930-le64.cache-3  79652363633577d7d713baab7f54ad8c-le64.cache-3  a1a78d9c18cd095d3829c724810e6ffb-le64.cache-3  (+4 more)
core/maxvol/.dropbox/: aggregation.dbx  config.db  config.dbx  deleted.dbx  filecache.dbx  host.db  host.dbx  hostkeys  notifications.dbx  photo.dbx  sigstore.dbx  unlink.db
core/maxvol/.idlerc/: recent-files.lst
core/maxvol/.instant/error/instant_module_315ebc21e0fe220e611965734859ae349eef07f9/: CMakeCache.txt  CMakeLists.txt  __init__.py  ffc_form_53dbf55d24d551a08237d0fe534a717af84d3787.h  instant_module_315ebc21e0fe220e611965734859ae349eef07f9.i
core/maxvol/.matplotlib/: fontList.cache
core/maxvol/.ssh/: github_rsa  github_rsa.pub  known_hosts
cross/: __init__.py  conv.py  cross2d_full.py  cross3d.py  multifun.py  multifun_dot.py  multifun_new.py
examples/: slater_cross_conv.py  test_basic.py  test_crossconv.py
(+27 files in other folders)
